"added the Config service for get request with btoa"
"added the Config service for get request with btoa"

--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h1>Login Form</h1>
-    <form  (ngSubmit)="onSubmit()" #userForm="ngForm">
+    <form  (ngSubmit)="showConfig(user)" #userForm="ngForm">
         {{diagnostic}}
       <div class="form-group">
         <label for="username">Username</label>
@@ -18,4 +18,3 @@
 
     </form>
 </div>
-<div>hello</div>
