--- a/src/app/register-form/register-form.component.html
+++ b/src/app/register-form/register-form.component.html
@@ -1,12 +1,24 @@
 <div class="container">
     <h1>Login Form</h1>
-    <form  (ngSubmit)="showConfig(user)" #userForm="ngForm">
+    <form  (ngSubmit)="register(user)" #userForm="ngForm">
         {{diagnostic}}
       <div class="form-group">
         <label for="userName">Username</label>
         <input type="text" class="form-control" id="userName" required [(ngModel)]="user.userName" 
-        name="username">
+        name="userName">
         TODO: remove this: {{user.userName}}
+      </div>
+      <div class="form-group">
+        <label for="fullName">Fullname</label>
+        <input type="text" class="form-control" id="fullName" required [(ngModel)]="user.fullName" 
+        name="fullName">
+        
+      </div>
+      <div class="form-group">
+        <label for="emailId">Email Id</label>
+        <input type="email" class="form-control" id="emailId" required [(ngModel)]="user.emailId" 
+        name="emailId">
+        
       </div>
 
       <div class="form-group">
