--- a/src/app/register-form/register-form.component.html
+++ b/src/app/register-form/register-form.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>Login Form</h1>
+    <h1>Register Form</h1>
     <form  (ngSubmit)="register(user)" #userForm="ngForm">
         {{diagnostic}}
       <div class="form-group">
