--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-light bg-primary">
   <a class="navbar-brand" href="#"><h3 [style.color]="'white'">Smart Bloggers</h3></a>
   <span class="example-spacer"></span>
-  <a class="btn btn-primary" href="/login" role="button">Login</a>
-  <a class="btn btn-primary" href="/register" role="button">Register</a>
+  <a class="btn btn-primary" href="login" role="button">Login</a>
+  <a class="btn btn-primary" href="register" role="button">Register</a>
  
 </nav>
