--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,5 +3,5 @@
   <span class="example-spacer"></span>
   <a class="btn btn-primary" href="login" role="button">Login</a>
   <a class="btn btn-primary" href="register" role="button">Register</a>
- 
+  <a class="btn btn-primary" href="users" role="button">All Users</a>
 </nav>
