--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -16,6 +16,7 @@
   <div class="alert alert-danger" *ngIf="error" role="alert">
   <h1>An error occured</h1>
   <p>{{ error }}</p>
+  <button class="btn btn-danger" (click)="onHandleError()">Okay</button>
   </div>
 </div>
 </div>
