--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,21 +1,46 @@
 <div class="container">
-    <h1>Authentication Form</h1>
-    <form>
+  <div class="alert alert-danger" role="alert" *ngIf="error">
+   <p>{{ error }}</p>
+  </div>
+  <div *ngIf="isLoading" style="text-align: center;">
+    <app-loading-spinner></app-loading-spinner>
+  </div>
+    
+    <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf= "!isLoading">
        
       <div class="form-group">
-        <label for="userName">Username</label>
-        <input type="text" class="form-control" id="userName" 
-        name="username">
+        <label for="email">Email</label>
+        <input type="email"
+         class="form-control"
+          id="email" 
+          ngModel
+        name="email"
+        required
+        email
+        />
         
       </div>
 
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" class="form-control" id="password" name="password">
+        <input type="password" 
+        class="form-control" 
+        id="password" 
+        ngModel
+        name="password"
+        required
+        minlength="6"
+
+        />
       </div>
       <div>
-      <button class="btn btn-primary">Regsiter/Sign Up</button>|
-      <button class="btn btn-primary" (click)="onSwitchMode()">Switch to login</button>
+      <button class="btn btn-primary"
+       type="submit"
+        [disabled]= "!authForm.valid"
+       >
+       {{ isLoginMode ? 'Login' : 'Sign Up' }}
+      </button>|
+      <button class="btn btn-primary" (click)="onSwitchMode()" type="button">Switch to  {{ isLoginMode ? 'Sign Up' : 'Login'}}</button>
     </div>
 
     </form>
