--- a/src/app/addblog/addblog.component.html
+++ b/src/app/addblog/addblog.component.html
@@ -1,8 +1,8 @@
 <div style="clear: left"></div>
 	<div style="clear: left"></div>
-	
+	<div class="well well-lg" style="width: 90%">
 	<form (ngSubmit)="onSubmit()" #f="ngForm">
-		<div class="well well-lg" style="width: 90%">
+		
 
 			<div class="form-group">
                 <label for="title">Title</label>
@@ -45,4 +45,17 @@
 			</div>
 			<button class="btn btn-primary" type="submit" [disabled]="!f.valid">Add</button>
 			<button class="btn btn-primary">Cancel</button>
+		
+			</form>
+			<hr>
+			<div class="row" *ngIf="submitted">
+				<div class="col-xs-12" >
+					<h3>The Blog Data you just enetered</h3>
+					<p>Blog name : {{ blog.blogName }}</p>
+					<p>Blog Tag : {{ blog.tag }}</p>
+					<p>Blog Content : {{ blog.content }}</p>
+					<p>Blog username : {{ blog.userName }}</p>
+				</div>
+			</div>
+		</div>
 			
