authguard,logout,changes in app component html file

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,5 +6,5 @@
   <a class="btn btn-primary" routerLinkActive="active" role="button" routerLink="/users">Users</a> 
   <a class="btn btn-primary" routerLinkActive="active" role="button" routerLink="/blog">AddBlog</a> 
   <a class="btn btn-primary" routerLinkActive="active" role="button" routerLink="/showblogs">All Blogs</a> 
-  
+  <a class="btn btn-primary" routerLinkActive="active" role="button" routerLink="/logout">Logout</a>
 </nav>
