--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,17 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+
+<nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="!currentUser">
+    <div class="navbar-nav">
+        <a class="nav-item nav-link" routerLink="/">Home</a>
+        
+    </div>
+</nav>
+
+<!-- main app container -->
+<div class="container" *ngIf="currentUser">
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+</div>
+
 
 
 
