--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,14 @@
 <nav class="navbar navbar-light bg-primary">
   <a class="navbar-brand" href="#"><h3 [style.color]="'white'">Smart Bloggers</h3></a>
   <span class="example-spacer"></span>
-  <a class="btn btn-primary" routerLinkActive="active" role="button" (click)="setCurrentUser()" routerLink="/login" *ngIf="!currentUser">
+  <a class="btn btn-primary" routerLinkActive="active" role="button" routerLink="/login" *ngIf="!isAuth && !currentUser">
     Login 
   </a>
-  <a>{{currentUser}}</a>
-  <a class="btn btn-primary" routerLinkActive="active" role="button" routerLink="/register" *ngIf="!currentUser">Register</a> 
-  <a class="btn btn-primary" routerLinkActive="active" role="button" routerLink="/users" *ngIf="currentUser">Users</a> 
-  <a class="btn btn-primary" routerLinkActive="active" role="button" routerLink="/blog" *ngIf="currentUser">AddBlog</a> 
-  <a class="btn btn-primary" routerLinkActive="active" role="button" routerLink="/showblogs" *ngIf="currentUser">All Blogs</a> 
-  <a class="btn btn-primary" routerLinkActive="active" role="button" routerLink="/logout" *ngIf="currentUser">Logout</a>
+  
+  <a class="btn btn-primary" routerLinkActive="active" role="button" routerLink="/register" *ngIf="!isAuth && !currentUser" >Register</a> 
+  <a class="btn btn-primary" routerLinkActive="active" role="button" routerLink="/users" *ngIf="isAuth && currentUser">Users</a> 
+  <a class="btn btn-primary" routerLinkActive="active" role="button" routerLink="/blog" *ngIf="isAuth && currentUser">AddBlog</a> 
+  <a class="btn btn-primary" routerLinkActive="active" role="button" routerLink="/showblogs" *ngIf="isAuth && currentUser">All Blogs</a> 
+  <a class="btn btn-primary" routerLinkActive="active" role="button" routerLink="/#" *ngIf="isAuth && currentUser">{{ currentUser }}</a> 
+  <a class="btn btn-primary" routerLinkActive="active" role="button" style="cursor:pointer" (click)="onLogout()" *ngIf="isAuth && currentUser">Logout</a>
 </nav>
