--- a/src/app/addblog/addblog.component.html
+++ b/src/app/addblog/addblog.component.html
@@ -54,7 +54,7 @@
 					<p>Blog name : {{ blog.blogName }}</p>
 					<p>Blog Tag : {{ blog.tag }}</p>
 					<p>Blog Content : {{ blog.content }}</p>
-					
+					<p>Blog Content : {{ blog.userName }}</p>
 				</div>
 			</div>
 		</div>
