--- a/src/app/showblogs/showblogs.component.html
+++ b/src/app/showblogs/showblogs.component.html
@@ -7,7 +7,7 @@
     <li class="list-group-item" *ngFor="let blog of loadedBlogs">
           <p><b>Blog Name :</b> {{ blog.blogName }}</p>
           <p><b>Description :</b> {{ blog.content }}</p>
-  
+          <p><b>Username :</b> {{ blog.userName }}</p>
   
       </li>
       
